--- a/index.html
+++ b/index.html
@@ -31,8 +31,73 @@
             <section>
                 <h2>What would you like to know?</h2>
                 <textarea name="user-question" id="" cols="30" rows="10"></textarea>
-                <button id="submit-button" Submit></button>
+                <button id="submit-button">Submit</button>
+            </section>
+
+            <section>
+                <p id="question-display"></p>
+            <div class="toy" id="toy"><!--(8ball html/css/js by Bence Szabo https://codepen.io/finnhvman/pen/wrLPJz)-->
+                <form class="ball" id="ball">
+                    <div class="window"></div>
+                    <div class="eight">
+                        <span>8</span>
+                    </div>
+
+                    <div class="answers" >
+                        <!-- Affirmatives -->
+                        <input id="1" type="radio" name="answer" required>
+                        <div class="answer up">It is<br>certain</div>
+                        <input id="2" type="radio" name="answer" required>
+                        <div class="answer up">It is<br>decidedly<br>so</div>
+                        <input id="3" type="radio" name="answer" required>
+                        <div class="answer down">Without<br>a<br>doubt</div>
+                        <input id="4" type="radio" name="answer" required>
+                        <div class="answer up">Yes<br>definitely</div>
+                        <input id="5" type="radio" name="answer" required>
+                        <div class="answer down">You may<br>rely<br>on it</div>
+                        <input id="6" type="radio" name="answer" required>
+                        <div class="answer down">As I<br>see it,<br>yes</div>
+                        <input id="7" type="radio" name="answer" required>
+                        <div class="answer up">Most<br>likely</div>
+                        <input id="8" type="radio" name="answer" required>
+                        <div class="answer down">Outlook<br>good</div>
+                        <input id="9" type="radio" name="answer" required>
+                        <div class="answer down">Yes</div>
+                        <input id="10" type="radio" name="answer" required>
+                        <div class="answer down">Signs<br>point to<br>yes</div>
+
+                        <!-- Non-comittals -->
+                        <input id="11" type="radio" name="answer" required>
+                        <div class="answer down">Reply hazy<br>try<br>again</div>
+                        <input id="12" type="radio" name="answer" required>
+                        <div class="answer up">Ask<br>again<br>later</div>
+                        <input id="13" type="radio" name="answer" required>
+                        <div class="answer down">Better not<br>tell you<br>now</div>
+                        <input id="14" type="radio" name="answer" required>
+                        <div class="answer down">Cannot<br>predict<br>now</div>
+                        <input id="15" type="radio" name="answer" required>
+                        <div class="answer down">Concentrate<br>and ask<br>again</div>
+
+                        <!-- Negatives -->
+                        <input id="16" type="radio" name="answer" required>
+                        <div class="answer up">Don't<br>count<br>on it</div>
+                        <input id="17" type="radio" name="answer" required>
+                        <div class="answer down">My reply<br>is<br>no</div>
+                        <input id="18" type="radio" name="answer" required>
+                        <div class="answer down">My<br>sources<br>say<br>no</div>
+                        <input id="19" type="radio" name="answer" required>
+                        <div class="answer down">Outlook<br>not so<br>good</div>
+                        <input id="20" type="radio" name="answer" required>
+                        <div class="answer up">Very<br>doubtful</div>
+                    </div>
+
+                </form>
+                
+                <div class="instruction">
+            </div>
+            <p id="answer-display"></p>
             </section>
         </main>
+        <script type="module" src="app.js"></script>
     </body>
 </html>
