added css for ball from https://codepen.io/finnhvman/pen/wrLPJz

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button id="submit-button">Submit</button>
             </section>
 
-            <section>
+            <section id="ball-answer" class="hidden">
                 <p id="question-display"></p>
             <div class="toy" id="toy"><!--(8ball html/css/js by Bence Szabo https://codepen.io/finnhvman/pen/wrLPJz)-->
                 <form class="ball" id="ball">
@@ -66,7 +66,7 @@
                         <input id="10" type="radio" name="answer" required>
                         <div class="answer down">Signs<br>point to<br>yes</div>
 
-                        <!-- Non-comittals -->
+                        <!-- Non-committals -->
                         <input id="11" type="radio" name="answer" required>
                         <div class="answer down">Reply hazy<br>try<br>again</div>
                         <input id="12" type="radio" name="answer" required>
