--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <p id="answer-display"></p>
             </section>
         </main>
+        <footer>&copy;2022 GreyCorp., Fate & Fortune Technologies Division</footer>
         <script type="module" src="app.js"></script>
     </body>
 </html>
