added js for ball from https://codepen.io/finnhvman/pen/wrLPJz, and getters for question section and submit button

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </header>
 
         <main>
-            <section>
+            <section id="question-section">
                 <h2>What would you like to know?</h2>
-                <textarea name="user-question" id="" cols="30" rows="10"></textarea>
+                <textarea name="user-question" id="user-question" cols="30" rows="10"></textarea>
                 <button id="submit-button">Submit</button>
             </section>
 
